--- a/src/posts/24-10-24.mdx
+++ b/src/posts/24-10-24.mdx
@@ -1,12 +1,11 @@
 ---
-hello: frontmatter
+slug: 24-10-24-week-1
+title: Week 1
+description: Example description
+date: 10-24-2024
 ---
 
-# Welcome to my MDX page!
- 
-This is some **bold** and _italics_ text.
- 
-This is a list in markdown:
+# Meet our team!
  
 - One
 - Two
