Update Jinx to jinx

--- a/src/posts/24-10-24.mdx
+++ b/src/posts/24-10-24.mdx
@@ -1,11 +1,11 @@
 ---
 slug: 24-10-24-week-1
 title: Week 1
-description: Week 1 @ Jinx
+description: Week 1 @ jinx
 date: 10-24-2024
 ---
 
-# Welcome to the Jinx Blog Portal!
+# Welcome to the jinx Blog Portal!
 
 This is one of the many places where we will announce updates and share results, reports, and insights into the behind-the-scenes of our projects and operations.
 
@@ -17,7 +17,7 @@ As of week one, we have been busy with preparation and planning for building an 
 
 ### 1. Finding a Proper Name for the Company
 
-Initially, we considered using the first initials of each team member to create a name, which resulted in "AKAXI." However, after discussions and brainstorming, we realized this name didn't effectively convey the purpose or spirit of our startup. During one of our brainstorming sessions, we stumbled upon the name "Jinx," and it resonated with all of us. We believe this name captures our vision perfectly, and we look forward to sharing more about it in the upcoming weeks.
+Initially, we considered using the first initials of each team member to create a name, which resulted in "AKAXI." However, after discussions and brainstorming, we realized this name didn't effectively convey the purpose or spirit of our startup. During one of our brainstorming sessions, we stumbled upon the name "jinx," and it resonated with all of us. We believe this name captures our vision perfectly, and we look forward to sharing more about it in the upcoming weeks.
 
 ### 2. Logo Design
 
@@ -33,4 +33,4 @@ For project management, we will implement a Kanban approach, utilizing the steps
 
 ---
 
-Stay tuned for next week’s update and progress report. Once again, we’re excited to Jinx it! 🚀
+Stay tuned for next week’s update and progress report. Once again, we’re excited to jinx it! 🚀
