--- a/website/src/posts/11-07-24.mdx
+++ b/website/src/posts/11-07-24.mdx
@@ -1,8 +1,8 @@
 ---
 slug: 07-11-24-week-2
-title: Week 2
+title: Shaping Our Vision and Values! 🌟
 description: Week 2  @ jinx
-date: 07-11-2024
+date: 11-07-2024
 ---
 
 # Week 2 at jinx
