--- a/website/src/posts/10-20-24.mdx
+++ b/website/src/posts/10-20-24.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 24-10-24-week-1
-title: Launching the Jinx Journey! 🚀
+title: Launching the jinx Journey! 🚀
 description: Week 1 @ jinx
 date: 10-24-2024
 ---
