--- a/website/src/posts/11-20-24.mdx
+++ b/website/src/posts/11-20-24.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 20-11-24-week-3
-title: Pitch Perfect at Jinx! 🎤
+title: Pitch Perfect at jinx! 🎤
 description: Week 3 @ jinx
 date: 11-20-2024
 ---
