--- a/website/src/posts/11-07-24.mdx
+++ b/website/src/posts/11-07-24.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 07-11-24-week-2
-title: Week 2
+title: Shaping Our Vision and Values! 🌟
 description: Week 2  @ jinx
 date: 07-11-2024
 ---
