fixed blog post

--- a/website/src/posts/12-01-24.mdx
+++ b/website/src/posts/12-01-24.mdx
@@ -30,14 +30,14 @@ Key Insights
 
 - **Investor Perspective**: Understanding Maximilian's persona helps us align our product development and pitching strategies with investor expectations, focusing on scalability and innovation.
 
-- **Product Personality**: Defining Jinxify as a persona itself ensures we maintain a consistent, approachable, and magical brand voice across all our interactions.
+- **Product Personality**: Defining jinxify as a persona itself ensures we maintain a consistent, approachable, and magical brand voice across all our interactions.
 
 
 These personas will be instrumental in shaping our product roadmap, marketing strategies, and user experience design. 
 
 We're excited to use these insights to:
 
-1 .**Refine Jinxify's Features**: Address specific pain points identified in our user personas.
+1 .**Refine jinxify's Features**: Address specific pain points identified in our user personas.
 
 2 .**Develop Targeted Marketing Campaigns**: Create campaigns that resonate with each persona's values and media consumption habits.
 
@@ -45,4 +45,4 @@ We're excited to use these insights to:
 
 ## Loking Ahead 
 
-Stay tuned as we continue to evolve Jinxify, guided by these rich personas! ✨
+Stay tuned as we continue to evolve jinxify, guided by these rich personas! ✨
