feature: blog posts for week 5 & 6

--- a/website/src/posts/12-01-24.mdx
+++ b/website/src/posts/12-01-24.mdx
@@ -24,7 +24,7 @@ Our team has developed four distinct personas that represent our brand and the c
 
 These personas embody the diverse needs, challenges, and aspirations of our target users and stakeholders.
 
-Key Insights
+## Key Insights
 
 - **User-Centric Approach**: By creating detailed personas, we've gained valuable insights into the daily challenges and goals of our potential users, allowing us to tailor Jinxify to their specific needs.
 
@@ -37,11 +37,11 @@ These personas will be instrumental in shaping our product roadmap, marketing st
 
 We're excited to use these insights to:
 
-1 .**Refine jinxify's Features**: Address specific pain points identified in our user personas.
+1. **Refine jinxify's Features**: Address specific pain points identified in our user personas.
 
-2 .**Develop Targeted Marketing Campaigns**: Create campaigns that resonate with each persona's values and media consumption habits.
+2. **Develop Targeted Marketing Campaigns**: Create campaigns that resonate with each persona's values and media consumption habits.
 
-3 .**Craft Investor Pitches**: Align with the expectations and investment style of personas like Maximilian.
+3. **Craft Investor Pitches**: Align with the expectations and investment style of personas like Maximilian.
 
 ## Loking Ahead 
 
